--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Reserve and buy tickets to best events in your city</title>
-    <title><h1>User registration</h1>h1></title>
+    <title>User registration</title>
 </head>
 
 <body>
