--- a/src/main/webapp/registration.html
+++ b/src/main/webapp/registration.html
@@ -11,19 +11,27 @@
 <br>
 
 <div align="center">
-<form action="/api/users" method="post">
+    <form action="/api/users" method="post">
 
-    user name:
-    <br>
-    <input type="text" name="name">
-    <br><br>
-    mail:
-    <br>
-    <input type="text" name="mail">
-    <br><br>
+        user name:
+        <br>
+        <input type="text" name="name">
+        <br><br>
+        mail:
+        <br>
+        <input type="text" name="mail">
+        <br><br>
+        password:
+        <br>
+        <input type="password" name="password">
+        <br><br>
+        repeat password
+        <br>
+        <input type="password" name="repeatedpassword">
+        <br><br>
 
-    <button type="submit" name="choiceBaton" value="register">register</button>
-</form>
+        <button type="submit" name="choiceBaton" value="register">register</button>
+    </form>
 </div>
 </body>
 </html>
