--- a/src/main/webapp/registration.html
+++ b/src/main/webapp/registration.html
@@ -23,11 +23,11 @@
         <br><br>
         password:
         <br>
-        <input type="password" name="password">
+        <input type="password" name="password" required>
         <br><br>
         repeat password
         <br>
-        <input type="password" name="repeatedpassword">
+        <input type="password" name="repeatedpassword" required>
         <br><br>
 
         <button type="submit" name="choiceBaton" value="register">register</button>
