Implement password reset
* findUserByEmail method added to UserService
* resetPassword method added to UserController

--- a/src/main/webapp/setNewPassword.html
+++ b/src/main/webapp/setNewPassword.html
@@ -13,7 +13,7 @@
     Please, set new password and repeat it
 </div>
 
-<form action="/api/users" method="post">
+<form action="/api/users/resetPassword" method="post">
     <br>
     <br>
     <div align="center">
