Add site with login process
* login site
* change html pages

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,19 +9,25 @@
 
 <body>
 <br>
-
 <div align="center">
-    Welcome in our ticket reservation and buy system
+    <h3>    WELCOME IN OUR TICKET RESERVATION AND BUY SYSTEM  </h3>
+    <br><br>
+    <button onclick="window.location.href='logIn.html'">log in</button>
+    <br><br>
+    <button onclick="window.location.href='registration.html'">register</button>
+
 </div>
 
-<form action="/api/users" method="post">
-    <br>
-    <br>
-    <div align="center">
-        <button type="submit" name="registerButtton" value="registration">register</button>
-        <button type="submit"  name="LogInButton" value="login" >log in</button>
-    </div>
-</form>
+<!--<form action="/api/users" method="post">-->
+<!--<br>-->
+<!--<br>-->
+<!--<div align="center">-->
+<!--<button type="submit" name="registerButtton" value="registration">register</button>-->
+<!---->
+<!--<button type="submit" name="LogInButton" value="login">log in</button>-->
+<!--</div>-->
+<!--</form>-->
+
 
 </body>
 
