--- a/src/main/webapp/registration.html
+++ b/src/main/webapp/registration.html
@@ -25,6 +25,9 @@
 <div align="center">
     <form action="/api/users/add" method="post">
 
+        <h3>USER REGISTRATION</h3>
+        <br><br>
+
         user name:
         <br>
         <input type="text" name="name" required>
@@ -48,19 +51,10 @@
         <br><br><br>
 
 
-        <div id="newPasswordButton">
-
-
-            Have you forgotten your password ?
-            <!--<form action="/api/users" method="post">-->
-                <!--<button type="submit" name="setNewPassword" value="setNewPassword">Set new password</button>-->
-
-
-            <button onclick="window.location.href='setNewPassword.html'">Set new password</button>
-
-
-            <!--</form>-->
-        </div>
+        <!--<div id="newPasswordButton">-->
+            <!--Have you forgotten your password ?-->
+            <!--<button onclick="window.location.href='setNewPassword.html'">Set new password</button>-->
+        <!--</div>-->
 
     </form>
 </div>
