--- a/src/main/webapp/setNewPassword.html
+++ b/src/main/webapp/setNewPassword.html
@@ -9,9 +9,12 @@
 <body>
 <br>
 
+<h3>SET NEW PASSWORD</h3>
 <div align="center">
     Please, set new password and repeat it
+
 </div>
+<br><br>
 
 <form action="/api/users/resetPassword" method="post">
     <br>
