--- a/src/main/webapp/logIn.html
+++ b/src/main/webapp/logIn.html
@@ -5,6 +5,18 @@
     <meta charset="UTF-8">
     <title>Log in</title>
     <title>Please enter your name and password</title>
+
+    <style>
+        #newPasswordButton {
+            padding: 10px;
+            /*border:2px dashed red;*/
+            position: relative;
+            top: 200px
+        }
+
+    </style>
+
+
 </head>
 
 <body>
@@ -17,7 +29,7 @@
     <form action="/api/users" method="post">
         <br>
         <br>
-        user name:
+        email:
         <br>
         <input type="text" name="name" required>
         <br><br>
@@ -26,7 +38,7 @@
         <br>
         <input type="password" name="Password" required>
         <br><br>
-        <button type="submit" name="registerButton" value="register">register</button>
+        <button type="submit" name="registerButton" value="register">login</button>
     </form>
 </div>
 
