Add registration confirmation
* new methods added to EmailService (basicMessageHelper, sendMessageWithTicket, sendMessageWithoutTicket)
* VerificationToken field added to UserEntity
* VerificationRepository interface created
* methods saveUserEntity and findByEmail added to UserService
* VerificationService class added
* saveUser method added and resetPassword method edited in UserController
* VerificationController created
* VerificationToken edited (UserEntity field added, constructor added)
* action argument in registration.html edited

--- a/src/main/webapp/registration.html
+++ b/src/main/webapp/registration.html
@@ -23,7 +23,7 @@
 <br>
 
 <div align="center">
-    <form action="/api/users/add" method="post">
+    <form action="/api/users/verify" method="post">
 
         <h3>USER REGISTRATION</h3>
         <br><br>
