--- a/src/main/webapp/logIn.html
+++ b/src/main/webapp/logIn.html
@@ -26,7 +26,7 @@
     <br><br>
 
 
-    <form action="/api/users" method="post">
+    <form action="/api/users/login" method="post">
         <br>
         <br>
         email:
