WIP: Mapstruct example

--- a/src/main/webapp/registration.html
+++ b/src/main/webapp/registration.html
@@ -34,7 +34,7 @@
         <br><br>
         mail:
         <br>
-        <input type="text" name="email" required>
+        <input type="text" name="mail" required>
         <br><br>
         password:
         <br>
